<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:id="@+id/maincontainer">

    <!-- Header -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#003399"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#396999"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/message_feedback"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
    <!-- Heading End -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <!--android:layout_centerVertical="true"-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/traning_main_lay2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/card_view_machine2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv_subject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subject"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_subject"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:hint="@string/enter_your_subject"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/message"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_message"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:clickable="true"
                            android:ems="10"
                            android:gravity="top"
                            android:hint="@string/enter_your_message"
                            android:padding="10dp"
                            android:textColor="#000000"
                            android:textColorHint="#999"
                            android:textSize="15sp" />


                        <Button
                            android:id="@+id/btn_submit_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/mybutton"
                            android:text="@string/submit"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:id="@+id/btnHomecomplainlist1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="#396999"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/powered_by_cfcs"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>

